feat: added variable for glass effect

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+:root {
+  --glass-fill-dark: rgba(0, 0, 0, 0.18);
+  --glass-fill-light: rgba(255, 255, 255, 0.1);
+  --glass-border-dark: rgba(24, 24, 24, 0.24);
+  --glass-border-light: rgba(0, 0, 0, 0.24);
+  --glass-blur: 5px;
+}
+
 html {
   background-image: url("/assets/Gradient.svg");
   background-size: cover;
