--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --glass-border-light: rgba(255, 255, 255, 0.24);
   --glass-blur: 5px;
   --transparent: rgba(255, 255, 255, 0);
+  --loader-bg: #2b2b2b;
 }
 
 html {
